--- a/index.html
+++ b/index.html
@@ -10,25 +10,11 @@
     <h1>AngularJSの練習</h1>
     <div ng-controller="MainController">
       <form novalidate name="myForm", ng-submit="addUser()">
-        <p>Name:
-        <input type="text" name="name" ng-model="user.name" required ng-minlength="5" ng-maxlength="8">
-        <span ng-show="myForm.name.$error.required">Required!</span>
-        <span ng-show="myForm.name.$error.minlength">Too short!</span>
-        <span ng-show="myForm.name.$error.maxlength">Too long!</span>
-        </p>
-        <p>Score:
-        <input type="number" name="score" ng-model="user.score">
-        </p>
-        <p>Email:
-        <input type="email" name="email" ng-model="user.email">
-        <span ng-show="myForm.email.$error.email">Not valid email!</span>
-        </p>
-        <p><input type="submit" value="add"></p>
-        <p> Web:
-        <input type="url" name="url" ng-model="user.url">
-        <span ng-show="myForm.url.$error.url">Not valid url!</span>
-        </p>
-        <p><input type="submit" value="add"></p>
+      <p>18+:<input type="checkbox" ng-model="user.adult" ng-true-value="'adult'" ng-false-value="'child'"></p>
+      <p>Phone:
+      <input type="radio" ng-model="user.phone" value="iPhone"> iPhone
+      <input type="radio" ng-model="user.phone" value="Android"> Android
+      </p>
       </form>
       <pre>{{user|json}}</pre>
     </div>
